examples/bad/05-02-while-invalid-condition.lagger
int main(){
    while("true"){
        println("Hello World");
    }
    return 0;
}